# ProjectMARS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  build-mingw-sh.bat  build-mingw.bat  config.ini.in  layers.py  sample_params.txt  setup.py  trace.txt
include/: BitMatrix.h  CLIRepl.h  Clustering.h  Coord.h  Game.h  GameDisplay.h  GrowthPrediction.h  HClustering.h  Logger.h  Matrix.h  Plant.h  PopulationGen.h  PopulationMatrix.h  RLState.h  Terrain.h  Vector.h
main/: bindings.cpp  cli.cpp  clustering.cpp  graphics.cpp  prediction.cpp  sdl-test.cpp  tests.cpp
python/: .gitignore  main.py  model.py  scratchpad.py  train.py  utils.py
python/layers/: README.md  layers.py
python/saved/: checkpoint  gamma-0-eps-03.data-00000-of-00001  gamma-0-eps-03.index  gamma-08-eps-03.data-00000-of-00001  gamma-08-eps-03.index  overnight1.data-00000-of-00001  overnight1.index
src/: BitMatrix.cpp  CLIRepl.cpp  Clustering.cpp  Game.cpp  GameDisplay.cpp  GrowthPrediction.cpp  HClustering.cpp  Logger.cpp  Plant.cpp  PopulationGen.cpp  PopulationMatrix.cpp  RLState.cpp  Terrain.cpp
